[workspace]
members = [
    "github/slack/getting-started/rust",
    "github/slack/star-messager/rust",
    "github/slack/issue-notifier/rust",
    "github/slack/commit-syncer/rust",
    "github/slack/pr-messager/rust",
    "github/slack/pr-review-notifier/rust",
    "github/slack/discussion-comment-notifier/rust",

    "github/gmail/star-thanks-by-gmail/rust",
    "github/gmail/pr-thanks-by-gmail/rust",

    "github/sendgrid/star-thanks-by-sendgrid/rust",

    "github/notion/assign-notifier/rust",

    "github/twilio/star-messenger/rust",

    "github/github/auto-pr-comment/rust",
    "github/github/check-jira-id/rust",

    "slack/slack/calculator/rust",
    "slack/slack/reverse/rust",

    "slack/cloudinary/upload/rust",

    "slack/dropbox/upload/rust",

    "slack/github/issue-creator/rust",

    "cloudinary/slack/image-rotator/rust",
]
