[workspace]
members = [
    "getting-started/rust",

    "discord/discord/ping/rust",
    "discord/discord/welcome/rust",
    "discord/discord/anti-invite-link/rust",

    "github/monday/pr-status-updater/rust",

    "github/jira/pr-status-updater/rust",
    "github/jira/sync-pr-to-jira/rust",

    "github/slack/star-messenger/rust",
    "github/slack/issue-notifier/rust",
    "github/slack/commit-syncer/rust",
    "github/slack/pr-messenger/rust",
    "github/slack/pr-review-notifier/rust",
    "github/slack/discussion-comment-notifier/rust",
    "github/slack/pr-review-comment-notifier/rust",
    "github/slack/branch-tag-created/rust",
    "github/slack/branch-tag-deleted/rust",
    "github/slack/commit-comment-notifier/rust",
    "github/slack/commit-notifier/rust",
    "github/slack/label-notifier/rust",
    "github/slack/discussion-notifier/rust",
    "github/slack/fork-notifier/rust",
    "github/slack/release-notifier/rust",
    "github/slack/repository-notifier/rust",
    "github/slack/workflow-job-notifier/rust",
    "github/slack/issue-creator-respond/rust",

    "github/gmail/star-thanks-by-gmail/rust",
    "github/gmail/pr-thanks-by-gmail/rust",

    "github/sendgrid/star-thanks-by-sendgrid/rust",
    "github/sendgrid/pr-thanks-by-sendgrid/rust",
    "github/sendgrid/star-send-question/rust",

    "github/notion/assign-notifier/rust",

    "github/twilio/star-messenger/rust",

    "github/github/auto-pr-comment/rust",
    "github/github/auto-issue-comment/rust",
    "github/github/issue-pr-naive-bot/rust",
    "github/github/issue-review-notifier/rust",
    "github/github/check-jira-id/rust",
    "github/github/pr-reviewer/rust",
    "github/github/full-pr-review-bot/rust",

    "slack/slack/calculator/rust",
    "slack/slack/reverse/rust",
    "slack/slack/lucky-draw/rust",
    "slack/slack/welcome/rust",
    "slack/slack/weather/rust",

    "slack/cloudinary/upload/rust",

    "slack/dropbox/upload/rust",

    "slack/github/issue-creator/rust",

    "slack/notion/add-todo-from-slack/rust",

    "telegram/telegram/ping/rust",
    "telegram/telegram/group-members-change/rust",
    "telegram/telegram/group-bad-message/rust",
    "telegram/telegram/group-link-limit/rust",

    "cloudinary/slack/image-rotator/rust",

    "timer/sendgrid/timer-reminder-by-sendgrid/rust",

    "jira/slack/comment-notifier/rust",
]
