[package]
name = "commit-notifier"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/commit-notifier.rs"
crate-type = ["cdylib"]

[dependencies]
flows-connector-dsi = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
