[package]
name = "pr-review-comment-notifier"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/pr-review-comment-notifier.rs"
crate-type = ["cdylib"]

[dependencies]
connector-dsi = { git="https://github.com/second-state/connector-dsi" }
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
