[package]
name = "dropbox-upload"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/upload.rs"
crate-type = ["cdylib"]

[dependencies]
url = "2.3.1"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
