[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/weather.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = { version = "0.10", features = ["wasmedge_ssl"] }
flows-connector-dsi = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
